--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Thaumaturgy/tools.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Thaumaturgy/tools.yml
@@ -34,6 +34,7 @@
     magicAlert: CP14MagicEnergy
     maxEnergy: 50
     energy: 0
+    unsafeSupport: false
   - type: CP14MagicEnergyExaminable
   - type: CP14SpellStorageAccessHolding
   - type: CP14SpellStorage
