--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fire_rune.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fire_rune.yml
@@ -5,7 +5,7 @@
   components: 
   - type: Sprite
     sprite: _CP14/Actions/Spells/fire.rsi
-    state: earth_wall
+    state: tiefling_revenge
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.5
   - type: CP14MagicEffectManaCost
@@ -29,7 +29,7 @@
       path: /Audio/Magic/rumble.ogg
     icon:
       sprite: _CP14/Actions/Spells/fire.rsi
-      state: earth_wall
+      state: tiefling_revenge
     event: !type:CP14DelayedEntityWorldTargetActionEvent
       cooldown: 10
 
