Spell icons folder restruct (#940)
* spell icon sprite restruct

* proto edit

* Update T1_fire_rune.yml

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fire_rune.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fire_rune.yml
@@ -4,8 +4,8 @@
   description: You create an area where a scalding stream of fire occurs with little delay.
   components: 
   - type: Sprite
-    sprite: _CP14/Effects/Magic/spells_icons.rsi
-    state: earth_wall
+    sprite: _CP14/Actions/Spells/fire.rsi
+    state: tiefling_revenge
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.5
   - type: CP14MagicEffectManaCost
@@ -28,8 +28,8 @@
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/rumble.ogg
     icon:
-      sprite: _CP14/Effects/Magic/spells_icons.rsi
-      state: earth_wall
+      sprite: _CP14/Actions/Spells/fire.rsi
+      state: tiefling_revenge
     event: !type:CP14DelayedEntityWorldTargetActionEvent
       cooldown: 10
 
