--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -260,9 +260,11 @@ CP14ClothingBeltQuiverArrow: CP14ClothingBeltQuiverIronArrow
 #2025-17-02
 CP14Crossbolt: CP14CrossboltIron
 
-#2025-24-02
+#2025-25-02
 CP14ClothingOuterClothingCuirass: CP14ArmorIronCuirass
-
+CP14ClothingOuterClothingInfantryCuirass: CP14ArmorIronCuirass
+CP14ClothingOuterClothingCuirassLoincloth: CP14ArmorIronCuirass
+CP14ClothingOuterClothingCuirassLeg: CP14ArmorIronCuirass
 
 # <---> CrystallEdge migration zone end
 
