--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Magic/twoHandedStaffs.yml
@@ -82,7 +82,7 @@
   components:
   - type: CP14MagicManacostModify
     modifiers:
-     Darkness: 1.4
+     Dimension: 1.4
   - type: CP14SpellStorage
     spells:
     - CP14ActionSpellShadowStep
