--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
@@ -107,6 +107,8 @@
     templateId: CP14Human
   - type: TransferMindOnGib
   - type: CP14KnowledgeStorage
+  - type: CP14DemiplaneStabilizer
+    enabled: false
 
 - type: entity
   parent: CP14BaseSpeciesDummy
