--- a/Resources/Prototypes/_CP14/Entities/Mobs/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/base.yml
@@ -30,6 +30,26 @@
           collection: MeatLaserImpact
 
 - type: entity
+  id: CP14MobMagical
+  abstract: true
+  categories: [ ForkFiltered ]
+  components:
+  - type: CP14MagicCasterSlowdown
+  - type: CP14MagicEnergyContainer
+    magicAlert: CP14MagicEnergy
+    maxEnergy: 100
+    energy: 100
+    unsafeSupport: true
+  - type: CP14MagicEnergyDraw
+    energy: 1
+    delay: 3 # 5m to full restore
+  - type: CP14MagicUnsafeDamage
+  - type: CP14MagicUnsafeSleep
+  - type: CP14MagicAttuningMind
+    autoCopyToMind: true
+  
+
+- type: entity
   parent:
   - CP14MobDamageable
   - MobRespirator
