--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/round_end.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/round_end.yml
@@ -1,20 +1,12 @@
 - type: entity
   id: CP14DemiplaneLinkCrystal
+  parent: BaseStructure
   categories: [ ForkFiltered ]
   name: demiplane link crystal
   description: Maintains communication with the demiplanes while charged. Causes mosnters from the demiplanes to attack the city. Once it is discharged, the game is over.
   suffix: ONE TO MAP
-  placement:
-    mode: SnapgridCenter
-    snap:
-    - Wall
   components:
-  - type: Transform
-    anchored: true
   - type: SpriteFade
-  - type: Clickable
-  - type: Physics
-    bodyType: Static
   - type: Fixtures
     fixtures:
       fix1:
@@ -26,12 +18,12 @@
         - WallLayer
   - type: Sprite
     noRot: true
-    sprite: _CP14/Structures/Specific/Thaumaturgy/demiplane_link_crystal.rsi
+    sprite: _CP14/Structures/Specific/Thaumaturgy/energy_monolith_big.rsi
     layers:
-    - state: full
+    - state: dimension
     - state: frame
     drawdepth: Mobs
-    offset: 0,0.9
+    offset: 0,0.8
   - type: PointLight
     enabled: true
     color: "#8f42ff"
@@ -61,3 +53,44 @@
     range: 10
     sound:
       path: /Audio/_CP14/Effects/demiplane_heartbeat.ogg
+
+- type: entity
+  id: CP14PortalFrameCrystal
+  categories: [ ForkFiltered ]
+  parent: BaseStructure
+  name: portal frame
+  description: A structure made of shadow crystals used to create a stable portal to another location.
+  components:
+  - type: Transform
+    anchored: true
+  - type: Clickable
+  - type: Physics
+    bodyType: Static
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.25,-0.25,0.25,0.25"
+        density: 60
+        mask:
+        - MachineMask
+        layer:
+        - MidImpassable
+        - LowImpassable
+  - type: Tag
+    tags:
+      - Structure
+  - type: Sprite
+    noRot: true
+    sprite: _CP14/Structures/Specific/Thaumaturgy/energy_monolith_small.rsi
+    layers:
+    - state: dimension
+    - state: frame 
+    drawdepth: Mobs
+    offset: 0,0.4
+  - type: CP14MagicEnergyContainer
+    maxEnergy: 100
+    energy: 100
+  - type: CP14MagicEnergyExaminable
+  - type: CP14MagicEnergyPortRelay
