--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/spike.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/spike.yml
@@ -6,7 +6,7 @@
   components:
   - type: Sprite
     sprite: _CP14/Objects/Weapons/Ranged/Projectiles/spike.rsi
-    state: pen
+    state: spike
   - type: DamageOtherOnHit
     damage:
       types:
