--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -195,10 +195,10 @@ CP14TwoHandedSwordScythe: null
 
 #2025-17-01
 CP14ClothingCloakBrassArmor: CP14ClothingOuterClothingCopperArmor
-CP14ClothingCloakCuirass: CP14ClothingOuterClothingCuirass
-CP14ClothingCloakInfantryCuirass: CP14ClothingOuterClothingInfantryCuirass
-CP14ClothingCloakCuirassLoincloth: CP14ClothingOuterClothingCuirassLoincloth
-CP14ClothingCloakCuirassLeg: CP14ClothingOuterClothingCuirassLeg
+CP14ClothingCloakCuirass: CP14ArmorIronCuirass
+CP14ClothingCloakInfantryCuirass: CP14ArmorIronCuirass
+CP14ClothingCloakCuirassLoincloth: CP14ArmorIronCuirass
+CP14ClothingCloakCuirassLeg: CP14ArmorIronCuirass
 
 #2025-21-01
 CP14PlateWooden: CP14Plate
