--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fire_rune.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fire_rune.yml
@@ -22,6 +22,7 @@
       - CP14AreaEntityEffectFireRune
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneEarthWall
+  - type: CP14MagicEffectPacifiedBlock
   - type: EntityWorldTargetAction
     range: 10
     itemIconStyle: BigAction
