--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fireball.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T1_fireball.yml
@@ -24,6 +24,7 @@
   - type: CP14MagicEffectSomaticAspect
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneFireball
+  - type: CP14MagicEffectPacifiedBlock
   - type: EntityWorldTargetAction
     checkCanAccess: false
     raiseOnUser: true
