--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -22,6 +22,7 @@
     endSpeech: "Glacies acus!"
   - type: CP14MagicEffectCastingVisual
     proto: CP14RuneIceShards
+  - type: CP14MagicEffectPacifiedBlock
   - type: EntityWorldTargetAction
     repeat: true
     checkCanAccess: false
