--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -260,6 +260,8 @@ CP14ClothingBeltQuiverArrow: CP14ClothingBeltQuiverIronArrow
 #2025-17-02
 CP14Crossbolt: CP14CrossboltIron
 
+#2025-26-02
+CP14BookImperialLawsHandBook: CP14GuidebookImperialLaws
 
 # <---> CrystallEdge migration zone end
 
