--- a/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
@@ -5,6 +5,7 @@
   components:
   - type: StorageFill
     contents:
+      - id: CP14GuidebookAlchemy
       - id: CP14ClothingEyesAlchemyGlasses
         prob: 0.5
       - id: CP14ClothingEyesAlchemyMonocle
@@ -103,6 +104,7 @@
   components:
   - type: StorageFill
     contents:
+      - id: CP14GuidebookDemiplanes
       - id: CP14ClothingCloakGuildmasterCape
         prob: 1
       - id: CP14ClothingShirtCottonWhite
