--- a/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/dresser.yml
@@ -72,6 +72,7 @@
   components:
   - type: StorageFill
     contents:
+      - id: CP14GuidebookImperialLaws
       - id: CP14ClothingHeadGuardHelmet
         prob: 0.7
       - id: CP14ClothingPantsGuardsChainmailSkirt
@@ -88,6 +89,7 @@
   components:
   - type: StorageFill
     contents:
+      - id: CP14GuidebookImperialLaws
       - id: CP14ClothingHeadGuardHelmet
         prob: 0.7
       - id: CP14ClothingPantsGuardsChainmailSkirt
