--- a/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/Books/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Bureaucracy/Books/base.yml
@@ -16,7 +16,7 @@
     - state: decor_wingette
       color: "#453f3a"
       map: [ "decor" ]
-    - state: icon_anvil
+    - state: icon_eye
       map: [ "icon" ]
     - state: overlay_null
       map: [ "overlay" ]
@@ -38,7 +38,6 @@
   id: CP14BookWriteableBase
   abstract: true
   parent: CP14BookBase
-  categories: [ ForkFiltered ]
   components:
   - type: Paper
     contentSize: 12000
@@ -59,9 +58,18 @@
   abstract: true
   suffix: Guidebook
   parent: CP14BookBase
-  categories: [ ForkFiltered ]
   components:
   - type: GuideHelp
     openOnActivation: true
     guides:
     - SS14
+
+- type: entity
+  parent: CP14BookBase
+  id: CP14BookKnowledgeBase
+  abstract: true
+  categories: [ ForkFiltered ]
+  name: knowledge book 
+  description: This book holds valuable knowledge that you can learn... if you're ready for it. 
+  components:
+  - type: CP14KnowledgePaperText
