--- a/Resources/Maps/_CP14/comoss.yml
+++ b/Resources/Maps/_CP14/comoss.yml
@@ -1,11 +1,11 @@
 meta:
   format: 7
   category: Map
-  engineVersion: 247.0.0
+  engineVersion: 247.2.0
   forkId: ""
   forkVersion: ""
-  time: 02/22/2025 14:14:57
-  entityCount: 15064
+  time: 02/26/2025 10:59:13
+  entityCount: 15073
 maps:
 - 1
 grids:
@@ -98,6 +98,7 @@ entities:
     - type: Transform
       parent: 1
     - type: Roof
+      data: {}
     - type: BecomesStation
       id: Comoss
     - type: MapGrid
@@ -42373,6 +42374,88 @@ entities:
       parent: 1420
     - type: Physics
       canCollide: False
+- proto: CP14BookshelfWoodenFilled
+  entities:
+  - uid: 475
+    components:
+    - type: Transform
+      pos: -21.5,24.5
+      parent: 2
+  - uid: 631
+    components:
+    - type: Transform
+      pos: -16.5,24.5
+      parent: 2
+  - uid: 1276
+    components:
+    - type: Transform
+      pos: -14.5,24.5
+      parent: 2
+  - uid: 1277
+    components:
+    - type: Transform
+      pos: -15.5,24.5
+      parent: 2
+  - uid: 1279
+    components:
+    - type: Transform
+      pos: -22.5,24.5
+      parent: 2
+  - uid: 1281
+    components:
+    - type: Transform
+      pos: -20.5,24.5
+      parent: 2
+  - uid: 1594
+    components:
+    - type: Transform
+      pos: -6.5,14.5
+      parent: 2
+  - uid: 9948
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -14.5,-6.5
+      parent: 2
+  - uid: 12052
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -15.5,2.5
+      parent: 2
+  - uid: 12645
+    components:
+    - type: Transform
+      pos: -15.5,-27.5
+      parent: 2
+  - uid: 12646
+    components:
+    - type: Transform
+      pos: -10.5,-33.5
+      parent: 2
+  - uid: 12647
+    components:
+    - type: Transform
+      pos: 4.5,-30.5
+      parent: 2
+  - uid: 12658
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 25.5,-7.5
+      parent: 2
+  - uid: 12666
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -13.5,14.5
+      parent: 2
+  - uid: 12667
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -13.5,13.5
+      parent: 2
 - proto: CP14BowCombat
   entities:
   - uid: 437
@@ -66423,41 +66506,11 @@ entities:
       parent: 2
 - proto: CP14Safe
   entities:
-  - uid: 475
-    components:
-    - type: Transform
-      pos: -15.5,24.5
-      parent: 2
   - uid: 480
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -21.5,22.5
-      parent: 2
-  - uid: 631
-    components:
-    - type: Transform
-      pos: -20.5,24.5
-      parent: 2
-  - uid: 1276
-    components:
-    - type: Transform
-      pos: -22.5,24.5
-      parent: 2
-  - uid: 1277
-    components:
-    - type: Transform
-      pos: -21.5,24.5
-      parent: 2
-  - uid: 1279
-    components:
-    - type: Transform
-      pos: -16.5,24.5
-      parent: 2
-  - uid: 1281
-    components:
-    - type: Transform
-      pos: -14.5,24.5
       parent: 2
   - uid: 1284
     components:
@@ -70470,13 +70523,6 @@ entities:
       parent: 2
     - type: Fixtures
       fixtures: {}
-  - uid: 1594
-    components:
-    - type: Transform
-      pos: -6.5,14.5
-      parent: 2
-    - type: Fixtures
-      fixtures: {}
   - uid: 1833
     components:
     - type: Transform
@@ -70682,6 +70728,14 @@ entities:
     components:
     - type: Transform
       pos: 30.5,16.5
+      parent: 2
+    - type: Fixtures
+      fixtures: {}
+  - uid: 12665
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -7.5,15.5
       parent: 2
     - type: Fixtures
       fixtures: {}
