--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
@@ -156,3 +156,19 @@
   - type: ConditionalSpawner
     prototypes:
     - CP14MobMonsterMosquito
+
+- type: entity
+  name: invisible whistler spawner
+  id: CP14SpawnMobMonsterInvisibleWhistler
+  parent: MarkerBase
+  categories: [ ForkFiltered ]
+  components:
+  - type: Sprite
+    layers:
+    - sprite: Markers/cross.rsi
+      state: green
+    - sprite: _CP14/Mobs/Monster/invisible_whistler.rsi
+      state: live
+  - type: ConditionalSpawner
+    prototypes:
+    - CP14MobMonsterInvisibleWhistler
