--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_gift.yml
@@ -1,4 +1,14 @@
 - type: entity
+  id: CP14DummyActionSpellManaManipulation
+  name: Mana manipulation
+  description: You can manipulate mana by giving it to other objects or taking it from them.
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    sprite: _CP14/Actions/Spells/meta.rsi
+    state: mana
+
+- type: entity
   id: CP14ActionSpellManaGift
   name: Mana transfer
   description: You can transfer a small amount of your magical energy to a target entity or magical object.
