--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -264,7 +264,7 @@
     shiveringHeatRegulation: 2000
     normalBodyTemperature: 310.15
     thermalRegulationTemperatureThreshold: 25
-  - type: Perishable
+  #- type: Perishable #CP14 - disable rotting
   - type: Butcherable
     butcheringType: Spike # TODO human.
     spawned:
