--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_heal_ballade.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_heal_ballade.yml
@@ -11,7 +11,7 @@
   - type: CP14MagicEffectManaCost
     manaCost: 5
   - type: CP14MagicEffect
-    magicType: Healing
+    magicType: Life
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
