--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_cure_heat.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_cure_heat.yml
@@ -11,7 +11,7 @@
   - type: CP14MagicEffectManaCost
     manaCost: 10
   - type: CP14MagicEffect
-    magicType: Healing
+    magicType: Life
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
