--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_cure_poison.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_cure_poison.yml
@@ -1,39 +1,42 @@
 - type: entity
-  id: CP14ActionSpellCureWounds
-  name: Cure wounds
-  description: You heal the target from physical damage
+  id: CP14ActionSpellBloodPurification
+  name: Blood purification
+  description: You cleanse the target's blood of poisons, and restore its volume slightly
   components:
   - type: Sprite
     sprite: _CP14/Actions/Spells/healing.rsi
-    state: cure_wounds
+    state: cure_poison
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.5
   - type: CP14MagicEffectManaCost
     manaCost: 10
   - type: CP14MagicEffect
-    magicType: Healing
+    magicType: Life
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectCureWounds
+      - CP14ImpactEffectBloodPurification
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectCureWounds
+      - CP14ImpactEffectBloodPurification
     - !type:CP14SpellApplyEntityEffect
       effects:
       - !type:HealthChange
         damage:
           types:
-            Slash: -10
-            Blunt: -10
-            Piercing: -10
+            Poison: -10
+            Bloodloss: -10
+            Caustic: -10
       - !type:Jitter
+      - !type:ModifyBleedAmount
+      - !type:ModifyBloodLevel
+        amount: 10
   - type: CP14MagicEffectVerbalAspect
-    startSpeech: "Et curabuntur..."
-    endSpeech: "vulnera tua"
+    startSpeech: "Nella coda..."
+    endSpeech: "sta il veleno"
   - type: CP14MagicEffectCastingVisual
-    proto: CP14RuneCureWounds
+    proto: CP14RuneBloodPurification
   - type: EntityTargetAction
     whitelist:
       components:
@@ -45,14 +48,14 @@
       path: /Audio/Magic/rumble.ogg
     icon:
       sprite: _CP14/Actions/Spells/healing.rsi
-      state: cure_wounds
+      state: cure_poison
     event: !type:CP14DelayedEntityTargetActionEvent
       cooldown: 5
       castDelay: 1.5
       breakOnMove: false
  
 - type: entity
-  id: CP14RuneCureWounds
+  id: CP14RuneBloodPurification
   parent: CP14BaseMagicRune
   categories: [ HideSpawnMenu ]
   components:
@@ -63,9 +66,12 @@
     - state: sun
       color: "#79b330"
       shader: unshaded
+    - state: double_outer
+      color: "#a1252f"
+      shader: unshaded
 
 - type: entity
-  id: CP14ImpactEffectCureWounds
+  id: CP14ImpactEffectBloodPurification
   parent: CP14BaseMagicImpact
   categories: [ HideSpawnMenu ]
   components:
@@ -77,9 +83,9 @@
 
 - type: entity
   parent: CP14BaseSpellScrollHealing
-  id: CP14SpellScrollCureWounds
-  name: cure wounds spell scroll
+  id: CP14SpellScrollBloodPurification
+  name: blood purification spell scroll
   components:
   - type: CP14SpellStorage
     spells:
-    - CP14ActionSpellCureWounds
+    - CP14ActionSpellBloodPurification
