--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_peace_ballade.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Life/T0_peace_ballade.yml
@@ -1,31 +1,31 @@
 - type: entity
-  id: CP14ActionSpellSpeedBallade
-  name: Speed ballade
-  description: Your music is filled with accelerating magic, speeding up the movement of all creatures nearby
+  id: CP14ActionSpellPeaceBallade
+  name: Peace ballade
+  description: Your music is filled with peaceful magic, forbidding anyone near you to fight.
   components:
   - type: Sprite
     sprite: _CP14/Actions/Spells/healing.rsi
-    state: speed_music
+    state: peace_music
   - type: CP14MagicEffectCastSlowdown
-    speedMultiplier: 1
+    speedMultiplier: 0.8
   - type: CP14MagicEffectManaCost
     manaCost: 5
   - type: CP14MagicEffect
-    magicType: Healing
+    magicType: Life
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14AreaEntityEffectSpeedBallade
+      - CP14AreaEntityEffectPeaceBallade
   - type: CP14MagicEffectRequiredMusicTool
   - type: CP14MagicEffectCastingVisual
-    proto: CP14RuneSpeedBallade
+    proto: CP14RunePeaceBallade
   - type: InstantAction
     itemIconStyle: BigAction
     sound: !type:SoundPathSpecifier
       path: /Audio/Magic/rumble.ogg
     icon:
       sprite: _CP14/Actions/Spells/healing.rsi
-      state: speed_music
+      state: peace_music
     event: !type:CP14ToggleableInstantActionEvent
       effectFrequency: 1
       cooldown: 15
@@ -33,7 +33,7 @@
       hidden: true
 
 - type: entity
-  id: CP14AreaEntityEffectSpeedBallade
+  id: CP14AreaEntityEffectPeaceBallade
   categories: [ HideSpawnMenu ]
   components:
   - type: TimedDespawn
@@ -47,16 +47,17 @@
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
-      - CP14ImpactEffectSpeedBallade
+      - CP14ImpactEffectPeaceBallade
     - !type:CP14SpellApplyEntityEffect
       effects:
-      - !type:MovespeedModifier
-        walkSpeedModifier: 1.15
-        sprintSpeedModifier: 1.15
-        statusLifetime: 1.5
+      - !type:GenericStatusEffect
+        key: Pacified
+        component: Pacified
+        type: Add
+        time: 1.5
 
 - type: entity
-  id: CP14ImpactEffectSpeedBallade
+  id: CP14ImpactEffectPeaceBallade
   parent: CP14BaseMagicImpact
   categories: [ HideSpawnMenu ]
   components:
@@ -64,19 +65,19 @@
     sprite: _CP14/Effects/music.rsi
     layers:
     - state: notes_5
-      color: "#e8cb56"
+      color: "#bd4fda"
       shader: unshaded
  
 - type: entity
-  id: CP14RuneSpeedBallade
+  id: CP14RunePeaceBallade
   parent: CP14BaseMagicRune
   categories: [ HideSpawnMenu ]
   components:
   - type: PointLight
-    color: "#e8cb56"
+    color: "#bd4fda"
   - type: Sprite
     sprite: _CP14/Effects/music.rsi
     layers:
     - state: notes_3
-      color: "#e8cb56"
+      color: "#bd4fda"
       shader: unshaded
