--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/spike.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Ranged/Ammunition/spike.yml
@@ -17,7 +17,7 @@
       melee:
         maxVol: 4
         reagents:
-        - ReagentId: CP14SleepyPoison
+        - ReagentId: CP14WhistlerPoison
           Quantity: 4
   - type: SolutionInjectOnEmbed
     transferAmount: 4
