--- a/Resources/Audio/_CP14/Effects/attributions.yml
+++ b/Resources/Audio/_CP14/Effects/attributions.yml
@@ -62,3 +62,9 @@
   license: "CC-BY-4.0"
   copyright: 'by SpaceLife on Freesound.org'
   source: "https://freesound.org/people/SpaceLife/sounds/545938/"
+
+
+- files: ["essence_consume.ogg"]
+  license: "CC0-1.0"
+  copyright: 'by DustyWind on Freesound.org'
+  source: "https://freesound.org/people/DustyWind/sounds/715784/"
