--- a/Resources/Prototypes/_CP14/Reagents/magic-essence.yml
+++ b/Resources/Prototypes/_CP14/Reagents/magic-essence.yml
@@ -4,6 +4,7 @@
   desc: cp14-reagent-desc-essence-earth
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#70533f"
   tileReactions:
@@ -16,6 +17,7 @@
   desc: cp14-reagent-desc-essence-fire
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#d9741c"
   tileReactions:
@@ -28,6 +30,7 @@
   desc: cp14-reagent-desc-essence-life
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#89e04f"
   tileReactions:
@@ -40,6 +43,7 @@
   desc: cp14-reagent-desc-essence-water
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#1c94d9"
   tileReactions:
@@ -52,6 +56,7 @@
   desc: cp14-reagent-desc-essence-light
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#ba97b8"
   tileReactions:
@@ -64,6 +69,7 @@
   desc: cp14-reagent-desc-essence-dimension
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#391c57"
   tileReactions:
@@ -76,6 +82,7 @@
   desc: cp14-reagent-desc-essence-death
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#55877a"
   tileReactions:
@@ -88,6 +95,7 @@
   desc: cp14-reagent-desc-essence-electric
   group: CP14MagicEssence
   flavor: CP14Bitterly
+  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#caed72"
   tileReactions:
